--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -12,6 +12,10 @@
 <div class="container">
     <ul class="nav bg-info">
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
+
+        </li>
+        <li class="nav-item">
             {% block navlink %}{% endblock %}
         </li>
     </ul>
