Display username in account page

--- a/terpalert/account/templates/account.html
+++ b/terpalert/account/templates/account.html
@@ -7,6 +7,6 @@
 {% endblock %}
 
 {% block content %}
-<h1>Welcome to your account</h1>
+<h1>Welcome to your account, {{ request.user.username }}</h1>
 
 {% endblock %}
