Reformat navigation bar

--- a/terpalert/account/templates/account.html
+++ b/terpalert/account/templates/account.html
@@ -3,7 +3,7 @@
 {% block title %}Account{% endblock %}
 
 {% block navlink %}
-<a class="nav-link" href="{% url 'logout' %}">Logout</a>
+<!--<a class="nav-link" href="{% url 'logout' %}">Logout</a>-->
 {% endblock %}
 
 {% block content %}
