--- a/terpalert/account/templates/registration/login.html
+++ b/terpalert/account/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block title %}TerpAlert{% endblock %}
 
 {% block navlink %}
-<a class="nav-link" href="{% url 'login' %}">Login</a>
+<!--<a class="nav-link" href="{% url 'login' %}">Login</a>-->
 {% endblock %}
 
 {% block content %}
