--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -13,7 +13,14 @@
     <ul class="nav bg-info">
         <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
 
+        {% if request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <a class="nav-link" href="{% url 'login' %}">Login</a>
+        {% endif %}
         </li>
         <li class="nav-item">
             {% block navlink %}{% endblock %}
