Link to signup page

--- a/terpalert/account/templates/registration/login.html
+++ b/terpalert/account/templates/registration/login.html
@@ -31,4 +31,8 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
+<p>
+    Don't have an account?<a class="nav-link" href="{% url 'signup' %}">Sign up Here</a>
+</p>
+
 {% endblock %}
