--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -18,9 +18,9 @@
         <li class="nav-item">
 
             {% if request.user.is_authenticated %}
-<!--            <a class="nav-link" href="{% url 'logout' %}">Logout</a>-->
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
-<!--            <a class="nav-link" href="{% url 'login' %}">Login</a>-->
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
             <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
             {% endif %}
         </li>
