--- a/terpalert/accounts/templates/registration/login.html
+++ b/terpalert/accounts/templates/registration/login.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Hello!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}- Login{% endblock %}
+
+{% block content %}
+<h1>Login</h1>
+{% for message in messages %}
+
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+{% endfor %}
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
+
+
+
+{% endblock %}
