--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -15,15 +15,24 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
-        <li class="nav-item">
 
-            {% if request.user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            {% else %}
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-            <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
-            {% endif %}
+
+        {% if request.user.is_authenticated %}
+         <li class="nav-item">
+            <a class="nav-link" href="{% url 'account' %}">Account</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
+        </li>
+        {% endif %}
+
         <li class="nav-item">
             {% block navlink %}{% endblock %}
         </li>
