Render all keywords associated with user

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -10,8 +10,10 @@
     {{ message }}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-
-
 {% endfor %}
 
+    <h2>Keywords</h2>
+    {% for keyword in keywords %}
+    <p>{{ keyword }}</p>
+    {% endfor %}
 {% endblock %}
