--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -1,11 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    {% load static %}
-    <script src="{% static 'main.js' %}"></script>
+
+
+    {% block scripts %}
+    {% endblock scripts %}
+
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
