--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -13,6 +13,7 @@
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>TerpAlert{% block title %} {% endblock %}</title>
 </head>
 <body>
@@ -24,19 +25,19 @@
 
 
         {% if request.user.is_authenticated %}
-         <li class="nav-item">
-            <a class="nav-link" href="{% url 'account' %}">Account</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account' %}">Account</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
         {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
+            </li>
         {% endif %}
 
         <li class="nav-item">
