Rename keyword to alert in all instances, including model name

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -17,18 +17,18 @@
         </div>
     {% endfor %}
 
-    <table id="keyword-table" class="table table-striped">
+    <table id="alert-table" class="table table-striped">
         <thead>
         <tr>
-            <th>Keywords</th>
+            <th>Alerts</th>
             <th>
-                <button type="button" class="btn btn-info" id="add-button" onclick="this.blur(); addKeyword(this);">
+                <button type="button" class="btn btn-info" id="add-button" onclick="this.blur(); addAlert(this);">
                     <i class="bi bi-plus-circle"></i>
                 </button>
             </th>
         </tr>
         </thead>
-        <tbody id="keyword-table-body">
+        <tbody id="alert-table-body">
 
         </tbody>
     </table>
