Add CSS for autocomplete to scroll

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -3,6 +3,21 @@
 
 {% block scripts %}
     <script src="{% static 'main.js' %}"></script>
+    <style>
+        .ui-autocomplete {
+            max-height: 100px;
+            overflow-y: auto;
+            /* prevent horizontal scrollbar */
+            overflow-x: hidden;
+        }
+
+        /* IE 6 doesn't support max-height
+         * we use height instead, but this forces the menu to always be this tall
+         */
+        * html .ui-autocomplete {
+            height: 100px;
+        }
+    </style>
 {% endblock scripts %}
 
 {% block title %}- Account{% endblock %}
