--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +15,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}"/>
 
 
     <title>TerpAlert{% block title %} {% endblock %}</title>
@@ -22,41 +23,47 @@
 <body>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e21833;">
+<nav class="navbar navbar-expand-md" style="background-color: #e21833;">
     <div class="container-xxl">
         <a href="{% url 'home' %}" class="navbar-brand">
-            <span class="fw-bold text-white">
+            <span class="fw-bold">
                 TerpAlert
             </span>
         </a>
 
         <!-- toggle button for mobile devices -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+                <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+            </span>
         </button>
 
         <!-- nav links -->
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
             <ul class="navbar-nav">
                 {% if request.user.is_authenticated %}
-                    <li class="nav-item text-white">
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'account' %}">Account</a>
                     </li>
-                    <li class="nav-item text-white">
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{% url 'signup' %}">Sign up</a>
+                        <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
                     </li>
                 {% endif %}
             </ul>
         </div>
     </div>
 </nav>
+
+{% block content %}
+
+{% endblock %}
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
