--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -16,14 +16,15 @@
     {% bootstrap_javascript %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
+    <script src="{% static 'main.js' %}"></script>
 
 
-    <title>TerpAlert{% block title %} {% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-md" style="background-color: #e21833;">
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: #e21833;">
     <div class="container-xxl">
         <a href="{% url 'home' %}" class="navbar-brand">
             <span class="fw-bold">
@@ -32,10 +33,8 @@
         </a>
 
         <!-- toggle button for mobile devices -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav">
-            <span class="navbar-toggler-icon">
-                <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
-            </span>
+        <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav">
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <!-- nav links -->
