--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -25,7 +25,7 @@
 
 <!-- navbar -->
 <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #e21833;">
-    <div class="container-xxl">
+    <div class="container-md">
         <a href="{% url 'home' %}" class="navbar-brand">
             <span class="fw-bold">
                 TerpAlert
