--- a/terpalert/accounts/templates/registration/signup.html
+++ b/terpalert/accounts/templates/registration/signup.html
@@ -1,24 +1,73 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block title %}- Signup{% endblock %}
+{% block scripts %}
+    <script src="{% static 'accounts.js' %}"></script>
+{% endblock scripts %}
+
+{% block title %}Signup | TerpAlert{% endblock %}
 
 {% block content %}
-<h1>Sign up</h1>
-{% for message in messages %}
+    <div class="container my-3">
+        <!-- Header text -->
+        <div class="row text-center">
+            <h1>Sign up</h1>
+        </div>
 
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-    {{ message }}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+        <!-- Signup form -->
+        <div class="row mb-3 justify-content-center">
+            <div class="col-md-6 col-sm-12">
+                <form action="" method="post">
+                    {% csrf_token %}
 
+                    <!-- Email -->
+                    <div class="form-group mb-3">
+                        <label for="{{ form.email.id_for_label }}"
+                               class="col-sm-4 mx-auto col-form-label">Email</label>
+                        <input type="email" class="form-control" id="{{ form.email.id_for_label }}"
+                               name="{{ form.email.html_name }}" required>
+                    </div>
 
-{% endfor %}
+                    <!-- Phone -->
+                    <div class="form-group mb-3">
+                        <label for="{{ form.phone.id_for_label }}"
+                               class="col-sm-4 mx-auto col-form-label">Phone</label>
+                        <input type="tel" class="form-control" id="{{ form.phone.id_for_label }}"
+                               name="{{ form.phone.html_name }}" onkeyup="phoneNumberFormatter()"
+                               maxlength="14" required>
+                    </div>
 
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+                    <!-- Password -->
+                    <div class="form-group mb-3">
+                        <label for="{{ form.password1.id_for_label }}"
+                               class="col-sm-4 mx-auto col-form-label">Password</label>
+                        <input type="password" class="form-control" id="{{ form.password1.id_for_label }}"
+                               name="{{ form.password1.html_name }}" required>
+                    </div>
 
+                    <!-- Confirm Password -->
+                    <div class="form-group mb-3">
+                        <label for="{{ form.password2.id_for_label }}"
+                               class="col-sm-4 mx-auto col-form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="{{ form.password2.id_for_label }}"
+                               name="{{ form.password2.html_name }}" required>
+                    </div>
 
+                    <!-- Show error message(s) -->
+                    {% if form.errors %}
+                        <p class="auth-form-error">{{ form.errors }}</p>
+                    {% endif %}
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-warning">Sign up</button>
+                </form>
+            </div>
+        </div>
+        <!-- Link to login page -->
+        <div class="row justify-content-center my-3">
+            <div class="col-md-6 col-sm-12">
+                <p>Already have an account? <a href="{% url 'login' %}">Log in</a></p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
