--- a/terpalert/static/style.css
+++ b/terpalert/static/style.css
@@ -13,6 +13,12 @@
 
 .btn-warning {
     background-color: #ffd200 !important;
+    border-color: #ffd200 !important;
+}
+
+.btn-warning:hover {
+    background-color: #ad7231 !important;
+    border-color: #ad7231 !important;
 }
 
 .auth-form-error {
