Take out striped rows in alert table

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -17,7 +17,7 @@
 
         <!-- User alert table -->
         <div class="row justify-content-center">
-            <table class="table table-striped align-middle" id="alert-table">
+            <table class="table align-middle" id="alert-table">
                 <thead>
                 <tr>
                     <th scope="col" class="col-9">Your alerts</th>
