Add fade animation to delete confirmation modal

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Delete alert confirmation dialogue -->
-        <div class="modal" tabindex="-1" id="delete-modal">
+        <div class="modal fade" tabindex="-1" id="delete-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
