Add modal popup to alert user they cannot add duplicate alerts

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -12,7 +12,7 @@
     <div class="container-md my-3">
         <!-- Header text -->
         <div class="row text-center">
-            <h1>Account</h1>
+            <h1>Welcome to your account</h1>
         </div>
 
         <!-- User alert table -->
@@ -51,6 +51,21 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Alert has already been added popup -->
+        <div class="modal fade" tabindex="-1" id="already-exists-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">You have already added this alert!</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
