--- a/terpalert/templates/base.html
+++ b/terpalert/templates/base.html
@@ -23,8 +23,8 @@
 <body>
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-md navbar-dark" style="background-color: #e21833;">
-    <div class="container-md">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e21833;">
+    <div class="container-fluid">
         <a href="{% url 'home' %}" class="navbar-brand">
             <span class="fw-bold">
                 TerpAlert
