Improve look of bootstrap modals

--- a/terpalert/accounts/templates/home.html
+++ b/terpalert/accounts/templates/home.html
@@ -61,7 +61,7 @@
                         <p></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Delete</button>
                     </div>
                 </div>
@@ -72,11 +72,10 @@
         <div class="modal fade" tabindex="-1" id="already-exists-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">You have already added this alert!</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div class="modal-header border-0 text-center">
+                        <h5 class="modal-title w-100 ">You have already added this alert!</h5>
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer align-content-center">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
